NetBSD Problem Report #51755

From www@NetBSD.org  Sat Dec 31 02:59:31 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id AF3CB7A2E9
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 31 Dec 2016 02:59:31 +0000 (UTC)
Message-Id: <20161231025930.8485F7A318@mollari.NetBSD.org>
Date: Sat, 31 Dec 2016 02:59:30 +0000 (UTC)
From: qfh02545@nifty.com
Reply-To: qfh02545@nifty.com
To: gnats-bugs@NetBSD.org
Subject: ether_addmulti() triggers kernel diagnostic assertion "(!cpu_intr_p() && !cpu_softintr_p())" failed
X-Send-Pr-Version: www-1.0

>Number:         51755
>Category:       kern
>Synopsis:       ether_addmulti() triggers kernel diagnostic assertion "(!cpu_intr_p() && !cpu_softintr_p())" failed
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Dec 31 03:00:01 +0000 2016
>Closed-Date:    Mon Jan 02 00:20:56 +0000 2017
>Last-Modified:  Mon Jan 02 00:20:56 +0000 2017
>Originator:     HITOSHI Osada
>Release:        NetBSD-current 20161231
>Organization:
>Environment:
NetBSD 7.99.53 (LLANO_VMWARE) #0: Sat Dec 31 11:16:57 JST 2016
	that@llano:/tmp/obj/sys/arch/amd64/compile/LLANO_VMWARE

>Description:
-------------------------
panic: kernel diagnostic assertion "(!cpu_intr_p() && !cpu_softintr_p())" failed: file "/Sources/src/sys/kern/subr_kmem.c", line 389 kmem(9) should not be used from the interrupt context
fatal breakpoint trap in supervisor mode
trap type 1 code 0 rip ffffffff80115465 cs 8 rflags 246 cr2 778695c110f8 ilevel 6 rsp fffffe80bff07500
curlwp 0xfffffe813fb3d460 pid 0.3 lowest kstack 0xfffffe80bff042c0
Stopped in pid 0.3 (system) at  netbsd:breakpoint+0x5:  leave
db{0}> bt
breakpoint() at netbsd:breakpoint+0x5
vpanic() at netbsd:vpanic+0x13d
sowwakeup() at netbsd:sowwakeup
kmem_alloc() at netbsd:kmem_alloc+0x3f
ether_addmulti() at netbsd:ether_addmulti+0x33
wm_ioctl() at netbsd:wm_ioctl+0x5a
if_mcast_op() at netbsd:if_mcast_op+0x6a
in6_addmulti() at netbsd:in6_addmulti+0x30c
in6_joingroup() at netbsd:in6_joingroup+0x45
in6_update_ifa1() at netbsd:in6_update_ifa1+0xaff
in6_update_ifa() at netbsd:in6_update_ifa+0x38
in6_tmpifadd() at netbsd:in6_tmpifadd+0x286
nd6_ra_input() at netbsd:nd6_ra_input+0x15b0
icmp6_input() at netbsd:icmp6_input+0x1143
ip6_input() at netbsd:ip6_input+0x618
ip6intr() at netbsd:ip6intr+0x7f
softint_dispatch() at netbsd:softint_dispatch+0xe4
DDB lost frame for netbsd:Xsoftintr+0x4f, trying 0xfffffe80bff07ff0
Xsoftintr() at netbsd:Xsoftintr+0x4f
--- interrupt ---
0:
db{0}> halt
No such command: halt
db{0}> poweroff
No such command: poweroff
db{0}> reboot
rebooting...
-------------------------

>How-To-Repeat:
Unknown(receive IPv6 RA?)

>Fix:

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->feedback
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Sat, 31 Dec 2016 15:11:54 +0000
State-Changed-Why:
Fix committed. Please update cvs, rebuild a kernel and try again.


From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51755 CVS commit: src/sys/net
Date: Sat, 31 Dec 2016 15:07:02 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Sat Dec 31 15:07:02 UTC 2016

 Modified Files:
 	src/sys/net: if_ethersubr.c

 Log Message:
 Use kmem_intr_alloc instead of kmem_alloc

 ether_addmulti still can be called in softint.

 Fix PR kern/51755


 To generate a diff of this commit:
 cvs rdiff -u -r1.231 -r1.232 src/sys/net/if_ethersubr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: HITOSHI Osada <qfh02545@nifty.com>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org,
        ozaki-r@NetBSD.org, qfh02545@nifty.com
Subject: Re: Re: kern/51755 (ether_addmulti() triggers kernel diagnostic assertion "(!cpu_intr_p() && !cpu_softintr_p())" failed)
Date: Sun, 1 Jan 2017 22:33:34 +0900 (JST)

 I've tested if_ethersubr.c(rev1.232) and no panic occurred.

 Thanks for your quick fix.

 ----- Original Message -----
 >From: ozaki-r@NetBSD.org
 >To: kern-bug-people@netbsd.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.or
 g,
 >        ozaki-r@NetBSD.org, qfh02545@nifty.com
 >Subject: Re: kern/51755 (ether_addmulti() triggers kernel diagnostic assertio
 n "(!cpu_intr_p() && !cpu_softintr_p())" failed)
 >Cc: 
 >Date: Sat, 31 Dec 2016 15:11:54 +0000 (UTC)
 >
 >
 >Synopsis: ether_addmulti() triggers kernel diagnostic assertion "(!cpu_intr_p
 () && !cpu_softintr_p())" failed
 >
 >State-Changed-From-To: open->feedback
 >State-Changed-By: ozaki-r@NetBSD.org
 >State-Changed-When: Sat, 31 Dec 2016 15:11:54 +0000
 >State-Changed-Why:
 >Fix committed. Please update cvs, rebuild a kernel and try again.
 >
 >
 >
 >


State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 02 Jan 2017 00:20:56 +0000
State-Changed-Why:
confirmed fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.